--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,7 +177,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Public Opinion Tracker</h1>
+        <h1>AI Public Opinion Tracker</h1>
 
         <div class="search-box">
             <input type="text" id="topicInput" placeholder="Enter topic (e.g., 'AI Regulations')">
