--- a/frontend/index.html
+++ b/frontend/index.html
@@ -414,6 +414,7 @@
         <span onclick="setTopic('Crypto Regulations in india')">Crypto Regulations in india</span>
     </div>    
 </div>
+<!-- bjsqzn -->
 
         <div class="search-box">
             <input type="text" id="topicInput" placeholder="Enter topic (e.g., 'AI Regulations')">
